new tests for the building of the multiplication matrix when the staircase is not stable

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,6 +13,9 @@ check_PROGRAMS		= neogb_io \
 			  fglm_build_matrixn_nonradical_radicalshape-31
 
 checkdiff               = test/diff/diff_cp_d_3_n_4_p_2.sh \
+			  test/diff/diff_eco6-16.sh \
+			  test/diff/diff_eco6-31.sh \
+			  test/diff/diff_eco6-qq.sh \
 			  test/diff/diff_eco10-31.sh \
 			  test/diff/diff_truncate_gb.sh \
 			  test/diff/diff_elim-31.sh \
